FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__ADM_Work_History__c.object
<CustomObject>
    <description>Due to the streaming API not sending changes for records, we have to store the changes so subscribers can be notified.</description>
    <fields>
        <fullName>agf__Sprint_Old__c</fullName>
        <description>Previous sprint value. Using text because team can be deleted</description>
        <label>Sprint (Old)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Sprint__c</fullName>
        <description>New sprint value. Using text because team can be deleted</description>
        <label>Sprint</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Work History</relationshipLabel>
        <relationshipName>Work_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work History</label>
    <nameField>
        <displayFormat>WH-{0000}</displayFormat>
        <label>Work History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>